--- a/jpa-orm-ipq/pom.xml
+++ b/jpa-orm-ipq/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>jpa-orm-ql</artifactId>
+	<artifactId>jpa-orm-ipq</artifactId>
 
 	<dependencies>
 		<dependency>
